# sl2cfoam-next-FAUniv

./: .gitignore  CMakeLists.txt  Makefile
exampleScripts/: listing1.jl  listing7.jl  listingA.jl  readme.txt  runJulia.sh  setup.sh  sl2cfoam.ipynb  theta_phi_one_data.json
inc/: sl2cfoam.h  sl2cfoam_tensors.h
installScripts/: installOnWindows.txt  install_julia.sh  install_jupyter.sh  install_minimal_julia_packages.sh  install_sl2cfoam.sh  install_useful_julia_packages.sh  launchJupyter.sh  launchJupyterLab.sh  linuxInstallSl2cfoam-next-FAUniv.sh  linuxInstallSl2cfoam-next.sh  linuxInstallSl2cfoam.sh  macInstallSl2cfoam-next-FAUniv.sh  macInstallSl2cfoam.sh  readme.txt
julia/: SL2Cfoam.jl  SL2CfoamGPU.jl
src/: CMakeLists.txt  b4.c  b4_qagp.c  utils.h
src/fastwigxj-1.4.1/: CHANGELOG  CMakeLists.txt  unfinishedCMakeListFromChalmers.txt
src/fastwigxj-1.4.1-no-x86/: Makefile  README
src/fastwigxj-1.4.1-no-x86/example/: clookup.c
src/fastwigxj-1.4.1-no-x86/inc/: fastwigxj_inc.h
src/fastwigxj-1.4.1-no-x86/src/: canonicalise.c  canonicalise_inc.h  fastwigxj.c  wigner6j_regge_canonicalize.c
src/fastwigxj-1.4.1-no-x86/test/: lookuptest.cc
src/fastwigxj-1.4.1/cfg/: fastwigxj_auto_config.h.in
src/fastwigxj-1.4.1/src/: CMakeLists.txt  canonicalise_inc.h  fastwigxj.c  test_cc_dbl.c  wigner9j_canonicalize.c
src/wigxjpf-1.13/: CMakeLists.txt
test/: CMakeLists.txt
tools/: CMakeLists.txt
